         declarations and code for C89 compilers (Sergio).
20150524 movie.c,ui/{fb/fbui.c,win32/{debugger.c,pokefinder.c},xlib/{xdisplay.c,
         xstatusbar.pl}},unittests/unittests.c: use C90 parameter lists
         (Stuart).
20150525 z80/coretest.c: fix parameter list of spectranet_page() definition in
         coretest (Stuart).
20150526 event.c,menu_data.pl,peripherals/disk/disciple.c,rzx.c,ui/{gtk/{
         binary.c,browse.c,gtkjoystick.c,memory.c,pokefinder.c},sdl/sdlui.c,
         widget/{menu.c,query.c,widget.c},xlib/xstatusbar.pl}: add static to
         functions where appropriate (Stuart).
20150526 ui/{gtk,win32}/roms.c: add static to roms[] arrays (Stuart).
20150526 movie.c,z80/coretest.c: add missing includes (Stuart).
20150526 peripherals/disk/wd_fdc.c: remove return statement at end of void
         function (Stuart).
20150526 movie.c,peripherals/{dck.c,disk/upd_fdc.c,joystick.c},rzx.c,ui/widget/{
         options.pl,query.c}: remove unreachable breaks after returns (Stuart).
20150527 peripherals/disk/plusd.h: remove unused plusd_joy_read() prototype
         (Stuart).
20150527 peripherals/{disk/{disciple.[ch],plusd.[ch]},if1.[ch]}: make DISCiPLE,
         +D and IF1 port handlers be static (Stuart).
20150527 peripherals/disk/opus.h: remove unused opus_joy_read() prototype
         (Stuart).
20150527 machines/{pentagon.[ch],specplus3.[ch],tc2068.[ch]},periph.[ch],
         peripherals/{ay.[ch],disk/{beta.[ch],didaktik.c,disciple.c,plusd.c},
         ide/{divide.c,simpleide.c,zxatasp.c,zxcf.c},if1.c,joystick.[ch],
         kempmouse.c,printer.c,scld.c,speccyboot.c,spectranet.c,ula.c,
         usource.c}: track port attachment for each data bus line (Stuart).
20150601 man/fuse.1: sort fbmode and sound-freq options. Remove duplicate
         doublescan-mode option (Sergio).
20150601 man/fuse.1: add available values for --drive-*-type options (Sergio).
20150601 configure.ac: fix GTK+2 detection when GTK+3 is not available (Sergio).